syntax = "proto3";

import "google/protobuf/wrappers.proto";

package customProtoTypes;

option csharp_namespace = "OrderBook.Protos.CustomTypes";

message ResponseStatus {
  google.protobuf.BoolValue isSuccess = 1;
  google.protobuf.StringValue message = 2;
}
